# FastApiMicroService

./: .gitignore  Dockerfile  Dockerfile-k6  README.md  docker-compose.yaml  main.py  pyproject.toml
charts/fastapi-service/: Chart.yaml  values.yaml
charts/fastapi-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/fastapi-service/templates/tests/: test-connection.yaml  test-system.yaml
controllers/: __init__.py  hello.py  items.py  versions.py
middleware/: __init__.py  log_exceptions.py  log_requests.py
tests/load/: load.js
tests/system/: test_hello.py  test_items.py  test_versions.py
