[tool.poetry]
name = "fastapi-micro-service"
version = "0.1.0"
description = "small fastapi micro service"
authors = ["Brian West"]
license = "None"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[tool.poetry.dev-dependencies]
ipython = "^7.21.0"
black = "^20.8b1"
flake8 = "^3.9.0"
mypy = "^0.812"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
