[tool.poetry]
name = "fastapi-micro-service"
version = "0.1.0"
description = "small fastapi micro service"
authors = ["Brian West"]
readme = "README.md"
packages = [{include = "fastapi_micro_service"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
logging_tree = "^1.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.8.0"
black = "^22.12.0"
flake8 = "^6.0.0"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-asyncio = "^0.20.3"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
